# CW

./: .gitignore  README.md
.cache/clangd/index/: algorithm.c.A17BD8F1265C9A8F.idx  algorithm.h.91C1BC4F99B2DFA5.idx  main.c.44B34261BFBC0147.idx  max30102.c.650DF64EAF07BC31.idx  max30102.h.BA463995601A375B.idx
assets/: 20260402_192707_esp8266.txt
main/: CMakeLists.txt  algorithm.c  algorithm.h  audio_tone.c  audio_tone.h  inmp441.c  inmp441.h  main.c  max30102.c  max30102.h  max98357.c  max98357.h  mic_recorder.c  mic_recorder.h  onenet_mqtt.c  onenet_mqtt.h  wifi_sta.c  wifi_sta.h
tools/: onenet_mqtt_diag.py  onenet_mqtt_test.py  onenet_token_gen.py
